2008-01-29  Stefan Kost  <ensonic@users.sf.net>

	* tests/check/Makefile.am:
	* tests/check/elements/.cvsignore:
	* tests/check/elements/rtp-payloading.c:
	  Add add testsuite for the rtp-payloader that tries simulating
	  dataflow. Needs more test data.

2008-01-29  Stefan Kost  <ensonic@users.sf.net>

	* tests/check/elements/alphacolor.c:
	  Remove two unused variables.

2008-01-28  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/rtsp/gstrtspsrc.c: (gst_rtspsrc_parse_rtpinfo):
	  Use g_ascii_strtoll() instead of atoll, which is only
	  available in C99.

2008-01-25  Thijs Vermeir  <thijsvermeir@gmail.com>

	* gst/rtp/Makefile.am:
	* gst/rtp/gstrtp.c:
	* gst/rtp/gstrtpmpvpay.c:
	* gst/rtp/gstrtpmpvpay.h:
	Add MPEG2 video payloader

2008-01-23  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/level/gstlevel.c:
	Use #include <math.h> instead of #include "math.h".

2008-01-21  Jan Schmidt  <Jan.Schmidt@sun.com>

	* tests/check/Makefile.am:
	Fix up some CFLAGS sets.
	Don't include gconfvideosrc in the states test.

	* tests/check/elements/autodetect.c: (GST_START_TEST):
	Add some error strings to fail_unless arguments to fix some weird
	compiler errors on Solaris.

2008-01-21  Jan Schmidt  <Jan.Schmidt@sun.com>

	* configure.ac:
	Detect video4linux headers on Solaris too.
	* sys/v4l2/gstv4l2colorbalance.h:
	* sys/v4l2/gstv4l2object.h:
	* sys/v4l2/v4l2_calls.c:
	* sys/v4l2/v4l2src_calls.c: (gst_v4l2_buffer_finalize),
	(gst_v4l2_buffer_new):

	Make v4l2 build on Solaris.
	Patch by: Brian Cameron  <brian.cameron at sun dot com>
	Fixes: #510505

2008-01-21  Stefan Kost  <ensonic@users.sf.net>

	* docs/plugins/gst-plugins-good-plugins-docs.sgml:
	  Update list from (still local) scanning script.

2008-01-19  Sebastian Dröge  <slomo@circular-chaos.org>

	Based on a patch by:
	    Victor STINNER <victor dot stinner at haypocalc dot com>

	* gst/wavparse/gstwavparse.c: (gst_wavparse_stream_headers):
	Set variable to NULL after freeing it to prevent double frees